# yuh_simulation

./: .gitignore  CMakeLists.txt  README.md  make_and_run.sh  make_run_visualize.sh  start_simulation.sh
behavior/include/: behavior.h  fight.h
behavior/src/: behaivor.cpp  fight.cpp
behaviors/: CMakeLists.txt
behaviors/include/: behaviors.h
behaviors/src/: behaviors.cpp
benchmarks/: CMakeLists.txt  map_lock_free_BM.cpp  map_mutex_BM.cpp  map_one_thread_BM.cpp
bot/: CMakeLists.txt
bot/include/: bot.h  move.h  move_lock_free.h  move_mutex.h
bot/src/: bot.cpp
cell/: CMakeLists.txt
cell/include/: cell.h
cell/src/: cell.cpp
file/: CMakeLists.txt
file/include/: file.h
file/src/: file.cpp
genes/: CMakeLists.txt  war_gene.cpp  war_gene.h
genes/include/: war_gene.h
genes/src/: war_gene.cpp
include/: point.cpp  position.h
main/: CMakeLists.txt  main.cpp
map/: CMakeLists.txt  map.cpp
map/include/: cell.h  cell_lock_free.h  cell_mutex.h  map.h  map_lock_free.h  map_mutex.h  mpmc_queue.h  position.h
map/src/: cell.cpp  map.cpp  map_lock_free.cpp  map_mutex.cpp
move/: CMakeLists.txt
move/include/: move.h
move/src/: move.cpp
parameters/: CMakeLists.txt
parameters/include/: parameters.h
parameters/src/: parameters.cpp
position/: CMakeLists.txt
position/include/: position.h
position/src/: position.cpp
rand/: CMakeLists.txt
rand/include/: rand.h
rand/src/: rand.cpp
run/: CMakeLists.txt  main.cpp
run/include/: run.h
run/src/: run.cpp
visualization/: make_charts.sh  make_video.sh  results.json
visualization/json/: bots_amount.json  parameters.json
visualization/src/: make_charts.py  make_video.py
